# superlinked-recipes

./: .gitignore  README.md
.github/workflows/: readme-update-notif.yaml
projects/e-commerce/: .gitignore  README.md  requirements.txt
projects/e-commerce/flask-ui/: config.py  requirements.txt  run.py
projects/e-commerce/flask-ui/app/: .env  __init__.py  routes.py  utils.py
projects/e-commerce/flask-ui/app/templates/: base.html  category.html  (+4 more)
projects/e-commerce/item2vec/: README.md  config.json  item2vec.py  requirements.txt
projects/e-commerce/notebooks/: 001-eda-and-preprocess-data.ipynb  002-superlinked-setup.ipynb  003-server-notebook.ipynb  004-wrapper-server-notebook.ipynb  requirements.txt
projects/e-commerce/superlinked_app/: .env-example  api.py  config.py  index.py  query.py  schema.py
projects/e-commerce/wrapper/: .env  Dockerfile  endpoint.py  requirements.txt
projects/e-commerce/wrapper/config/: query_config.json
projects/e-commerce/wrapper/kv/: redis.py
projects/hotel-search/: README.md  requirements.txt
projects/hotel-search/frontend_app/: pyproject.toml  settings.toml
projects/hotel-search/frontend_app/.streamlit/: config.toml
projects/hotel-search/frontend_app/app/frontend/: components.py  main.py
projects/hotel-search/frontend_app/app/superlinked/: __init__.py  superlinked_client.py
projects/hotel-search/frontend_app/app/utils/: logging.py  utils.py
projects/hotel-search/notebooks/: eda.ipynb  superlinked-queries.ipynb
projects/hotel-search/superlinked_app/: .env-example  api.py  config.py  index.py  nlq.py  query.py
(+2 files in other folders)
